--- a/year1/learning html and css/practise/index.html
+++ b/year1/learning html and css/practise/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="cssPractise.css"/>
         <title>HTML practise</title>
     </head>
     <body>
+        <a href="blog.html">go to blog</a>
+        <hr>
         <!--a comment-->
-        <h1>Heading One</h1>
+        <h1>Heading One </h1>
         <h2>Heading Two</h2>
         <p>Lorem ipsum dolor sit amet consectetur <strong>adipisicing</strong> elit. Possimus ipsam beatae minus aliquid <a href="http://youtube.com"> deleniti numquam, nihil sit  unde</a> sint quia voluptas alias similique, repudiandae itaque voluptatibus id, et veniam. Nisi aspernatur corrupti perferendis vero soluta labore delectus recusandae, laudantium eum minus a. Soluta libero quod incidunt a dolorum saepe vitae rem. Nulla neque perspiciatis provident ipsa, autem pariatur deserunt velit ab? Dolore similique sit quo atque eos eligendi, est recusandae veniam. Magni amet placeat, maxime similique accusantium nihil delectus, optio autem non quod dolor porro quasi illum quae? Iste incidunt in veritatis neque rem architecto veniam nobis accusantium soluta iusto.</p>
         <p>Lorem ipsum dolor sit amet <a href="http://google.com" target="_blank"> consectetur, adipisicing elit.</a> <em> Eum ratione obcaecati</em> beatae aliquam qui at molestiae porro facilis suscipit, quis vero, quae nisi laborum, voluptates ullam consectetur eaque enim mollitia blanditiis! Rem hic numquam aperiam! Saepe voluptatibus vero ipsa recusandae culpa illo cum. Velit deserunt quia exercitationem voluptate ducimus. Commodi quisquam labore omnis quis ratione odit incidunt harum sapiente aperiam sit at blanditiis ipsum sequi nostrum, aliquam rerum suscipit alias illum numquam? Magnam sed eos, quos recusandae laborum harum quaerat molestias sit necessitatibus at odio et nobis voluptatibus temporibus tenetur neque autem, dolorem facere numquam natus molestiae optio eaque voluptatem!</p>
@@ -88,7 +91,7 @@
             </div>
         </form>
         <!--button-->
-        <button>clickMeBrv</button>
+        <button class="btn">clickMeBrv</button>
         <br>
         <!--image-->
         <a href="Discord prof (4).png">
