working on the exersice

--- a/year1/learning html and css/practise/modernWEB/about.html
+++ b/year1/learning html and css/practise/modernWEB/about.html
@@ -15,6 +15,20 @@
         <hr>
         <h1>The Generics</h1>
     </header>
+    <section>
+        <h2>ABOUT</h2>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure cum numquam illum, dolor laboriosam mollitia. Cum ducimus repudiandae porro, sunt et dicta maxime modi unde, reprehenderit itaque ea cupiditate, distinctio tenetur optio ex corrupti obcaecati reiciendis non incidunt debitis alias aliquid molestias odio! Nisi vitae nam modi, suscipit minima necessitatibus aut officiis quo cumque quisquam asperiores a ipsam, eaque labore ratione sit voluptate unde itaque recusandae atque tempore deleniti tenetur minus. Illo ullam, iusto corrupti ipsa porro consequatur, pariatur animi ratione quo sunt nesciunt ab perspiciatis. Autem repudiandae cupiditate necessitatibus, eveniet aliquam culpa commodi doloribus illum, nemo iusto inventore.</P>
+        <img src="Band Members.png" alt="this is us XD!">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum soluta doloremque, tenetur, obcaecati iste ipsa quaerat ipsam dolor cupiditate mollitia dicta maiores, distinctio culpa hic? Cum veritatis consectetur eum dolores?</p>
+    </section>
+    <footer>
+        <h3>the Generics</h3>
+        <ul>
+            <li><img src="Facebook Logo.png" alt="that lame site"></li>
+            <li><img src="Spotify Logo.png" alt="that music app"></li>
+            <li><img src="YouTube Logo.png" alt="that video site"></li>
+        </ul>
+    </footer>
     
 </body>
 </html>
