more images to work with

--- a/year1/learning html and css/practise/modernWEB/about.html
+++ b/year1/learning html and css/practise/modernWEB/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="this is the description">
     <title>about</title>
 </head>
 <body>
