--- a/year1/learning html and css/practise/modernWEB/about.html
+++ b/year1/learning html and css/practise/modernWEB/about.html
@@ -8,9 +8,9 @@
     <header>
         <nav>
             <ul>
-                <li>home</li>
-                <li>store</li>
-                <li>about</li>
+                <li> <a href="index.html"> home</a></li>
+                <li> <a href="store.html"> store </a></li>
+                <li> <a href="about.html"> about</a></li>
             </ul>
         </nav>
         <hr>
