done with html part

--- a/year1/learning html and css/practise/modernWEB/about.html
+++ b/year1/learning html and css/practise/modernWEB/about.html
@@ -25,9 +25,21 @@
     <footer>
         <h3>the Generics</h3>
         <ul>
-            <li><img src="Facebook Logo.png" alt="that lame site"></li>
-            <li><img src="Spotify Logo.png" alt="that music app"></li>
-            <li><img src="YouTube Logo.png" alt="that video site"></li>
+            <li>
+                <a href="https://facebook.com" target="_blank">
+                     <img src="Facebook Logo.png" alt="that lame site">
+                </a>
+            </li>
+            <li>
+                <a href="https://Spotify.com" target="_blank">
+                    <img src="Spotify Logo.png" alt="that music app">
+                </a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank">
+                    <img src="YouTube Logo.png" alt="that video site">
+                </a>
+            </li>
         </ul>
     </footer>
     
