working on my style

--- a/year1/learning html and css/practise/modernWEB/about.html
+++ b/year1/learning html and css/practise/modernWEB/about.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta name="description" content="this is the description">
     <title>about</title>
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav main-nav">
             <ul>
-                <li> <a href="index.html"> home</a></li>
-                <li> <a href="store.html"> store </a></li>
-                <li> <a href="about.html"> about</a></li>
+                <li> <a href="index.html"> HOME</a></li>
+                <li> <a href="store.html"> STORE </a></li>
+                <li> <a href="about.html"> ABOUT</a></li>
             </ul>
         </nav>
-        <hr>
-        <h1>The Generics</h1>
+        <h1 class="band-name large">The Generics</h1>
     </header>
-    <section>
-        <h2>ABOUT</h2>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure cum numquam illum, dolor laboriosam mollitia. Cum ducimus repudiandae porro, sunt et dicta maxime modi unde, reprehenderit itaque ea cupiditate, distinctio tenetur optio ex corrupti obcaecati reiciendis non incidunt debitis alias aliquid molestias odio! Nisi vitae nam modi, suscipit minima necessitatibus aut officiis quo cumque quisquam asperiores a ipsam, eaque labore ratione sit voluptate unde itaque recusandae atque tempore deleniti tenetur minus. Illo ullam, iusto corrupti ipsa porro consequatur, pariatur animi ratione quo sunt nesciunt ab perspiciatis. Autem repudiandae cupiditate necessitatibus, eveniet aliquam culpa commodi doloribus illum, nemo iusto inventore.</P>
-        <img src="Band Members.png" alt="this is us XD!">
+    <section class="content-section container">
+        <h2 class="section-header">ABOUT</h2>
+        
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure cum numquam illum, dolor laboriosam mollitia.<img class="about-band-image" src="Band Members.png" alt="this is us XD!">
+             Cum ducimus repudiandae porro, sunt et dicta maxime modi unde, reprehenderit itaque ea cupiditate, distinctio tenetur optio ex corrupti obcaecati reiciendis non incidunt debitis alias aliquid molestias odio! Nisi vitae nam modi, suscipit minima necessitatibus aut officiis quo cumque quisquam asperiores a ipsam, eaque labore ratione sit voluptate unde itaque recusandae atque tempore deleniti tenetur minus. Illo ullam, iusto corrupti ipsa porro consequatur, pariatur animi ratione quo sunt nesciunt ab perspiciatis. Autem repudiandae cupiditate necessitatibus, eveniet aliquam culpa commodi doloribus illum, nemo iusto inventore.</P>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum soluta doloremque, tenetur, obcaecati iste ipsa quaerat ipsam dolor cupiditate mollitia dicta maiores, distinctio culpa hic? Cum veritatis consectetur eum dolores?</p>
     </section>
     <footer>
-        <h3>the Generics</h3>
+        <h3 class="band-name">The Generics</h3>
         <ul>
             <li>
                 <a href="https://facebook.com" target="_blank">
-                     <img src="Facebook Logo.png" alt="that lame site">
+                     <img src="Facebook Logo.png" alt="that lame site" width="30" height="30" class="socals">
                 </a>
             </li>
             <li>
                 <a href="https://Spotify.com" target="_blank">
-                    <img src="Spotify Logo.png" alt="that music app">
+                    <img src="Spotify Logo.png" alt="that music app" width="30" height="30" class="socals">
                 </a>
             </li>
             <li>
                 <a href="https://youtube.com" target="_blank">
-                    <img src="YouTube Logo.png" alt="that video site">
+                    <img src="YouTube Logo.png" alt="that video site" width="30" height="30" class="socals">
                 </a>
             </li>
         </ul>
