--- a/year1/learning html and css/practise/modernWEB/index.html
+++ b/year1/learning html and css/practise/modernWEB/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta name="description" content="this is the description">
     <title>The Generics</title>
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav main-nav">
             <ul>
-                <li> <a href="index.html"> home</a></li>
-                <li> <a href="store.html"> store </a></li>
-                <li> <a href="about.html"> about</a></li>
+                <li> <a href="index.html"> HOME</a></li>
+                <li> <a href="store.html"> STORE </a></li>
+                <li> <a href="about.html"> ABOUT</a></li>
             </ul>
         </nav>
-        <hr>
-        <h1>The Generics</h1>
+        <h1 class="band-name large">The Generics</h1>
         <button type="button">get our latest album</button>
     <br>
     <br>
@@ -55,21 +55,21 @@
         </div>
     </section>
     <footer>
-        <h3>the Generics</h3>
+        <h3 class="band-name">The Generics</h3>
         <ul>
             <li>
                 <a href="https://facebook.com" target="_blank">
-                     <img src="Facebook Logo.png" alt="that lame site">
+                     <img src="Facebook Logo.png" alt="that lame site" width="30" height="30">
                 </a>
             </li>
             <li>
                 <a href="https://Spotify.com" target="_blank">
-                    <img src="Spotify Logo.png" alt="that music app">
+                    <img src="Spotify Logo.png" alt="that music app" width="30" height="30">
                 </a>
             </li>
             <li>
                 <a href="https://youtube.com" target="_blank">
-                    <img src="YouTube Logo.png" alt="that video site">
+                    <img src="YouTube Logo.png" alt="that video site" width="30" height="30">
                 </a>
             </li>
         </ul>
