--- a/year1/learning html and css/platformer/index.html
+++ b/year1/learning html and css/platformer/index.html
@@ -8,7 +8,7 @@
     <title>2D game</title>
 </head>
 <body>
-    <canvas class="canvas"></canvas>
+    <canvas id="canvas1"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
