i finally managed to make the background to work.

--- a/year1/learning html and css/platformer/BG.html
+++ b/year1/learning html and css/platformer/BG.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+    <div class="controls">
+        <label for="animations">Choose motion state:</label>
+        <br>
+        <select name="animations" id="animations">
+            <option value="still">still</option>
+            <option value="normal">normal</option>
+            <option value="fast">fast</option>
+        </select>
+    </div>
     <script src="BGscript.js"></script>
 </body>
 </html>
