--- a/year1/learning html and css/platformer/BG.html
+++ b/year1/learning html and css/platformer/BG.html
@@ -8,7 +8,6 @@
     <title>backGrounds</title>
 </head>
 <body>
-    <canvas id="canvas1"></canvas>
     <div class="controls">
         <label for="animations">Choose motion state:</label>
         <br>
@@ -17,6 +16,9 @@
             <option value="normal">normal</option>
             <option value="fast">fast</option>
         </select>
+    </div>
+    <div>
+        <canvas id="canvas1"></canvas>
     </div>
     <script src="BGscript.js"></script>
 </body>
