--- a/year1/learning html and css/platformer/BG.html
+++ b/year1/learning html and css/platformer/BG.html
@@ -8,17 +8,10 @@
     <title>backGrounds</title>
 </head>
 <body>
-    <div class="controls">
-        <label for="animations">Choose motion state:</label>
-        <br>
-        <select name="animations" id="animations">
-            <option value="still">still</option>
-            <option value="normal">normal</option>
-            <option value="fast">fast</option>
-        </select>
-    </div>
-    <div>
-        <canvas id="canvas1"></canvas>
+    <canvas id="canvas1"></canvas>  
+    <div id="container">
+        <p>Game speed:<span id="showGamespeed"></span></p>
+        <input type="range" min="0" max="20" value="5" class="slider" id="slider">
     </div>
     <script src="BGscript.js"></script>
 </body>
